* Updates to product ingestions:
  - CLOUDNET L2 classification: fixed fillvalue mapping of values to NaN.
  - GEOMS FTIR: allow instrument lat/lon/alt variables to be one-dimensional
    with replicated values.

1.15 2022-03-14
~~~~~~~~~~~~~~~

* Fixed issue where bin() operation was removing scalar enumeration variables.

* Updates to product ingestions:
  - ECMWF GRIB: fixed parameter mapping for CAMS model data that uses
    masterTablesVersion=27 data and added support for new
    masterTablesVersion=28 data
  - GEOMS UVVIS.BREWER: added support for template V001
  - GEOMS PANDORA: added support for template V003
  - S5P L2 AAI: added new 335/367 wavelength pair
  - S5P L2 CO: added new apriori profile and support for new AVK unit
  - S5P L2 O3 Profile: added surface_albedo and cloud_albedo
  - S5P L2 HCHO/O3/SO2: added support for updated NRTI indication attribute.

1.14 2021-10-20
~~~~~~~~~~~~~~~

* Updated embedded udunits2 library to version 2.2.28.

* Improved CMake build system.

* Fixed issue when building against HDF5 1.12.

* Updates to product ingestions:
  - AEOLUS L1B: fixed ingestion of Mie/measurement data; added sensor angles
  - AEOLUS L2B: fixed ingestion of Mie data; added sensor angles
  - CLOUDNET L2 classification: added support for new (netcdf4) format
  - EARTHCARE: added very early support (limited version of ECA_ACM_CAP_2B)
  - ECMWF GRIB: fixed unit of backscatter coefficient 1/(milli sr) -> 1/(m sr),
    added support for new masterTablesVersion=27 data
  - GEOMS UVVIS.DOAS: allow template V007 files to be stored in hdf5 format
  - GHG CCI: added support for TROPOMI WFMD L2
  - OMI L2: added sensor alt/lat/lon and surface altitude/pressure
  - OMI L2 OMAERUV: fix ingestion issues
  - QA4ECV HCHO: added amf=clear_sky ingestion option
  - S5P L2 HCHO: renamed cloud_altitude variable to cloud_height
  - S5P L2 NO2: added retrieval of O2-O2 cloud (O22CLD) data
  - S5P L2 NO2+FRESCO: added scene_albedo and scene_pressure