@@ -150,6 +150,18 @@
 <td><p>[DU]</p></td>
 <td><p>uncertainty of the O3 column number density</p></td>
 </tr>
+<tr class="row-even"><td><p><strong>O3_column_number_density_uncertainty_random</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[DU]</p></td>
+<td><p>random component of the uncertainty of the O3 column number density</p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>O3_column_number_density_uncertainty_systematic</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[DU]</p></td>
+<td><p>systematic component of the uncertainty of the O3 column number density</p></td>
+</tr>
 <tr class="row-even"><td><p><strong>O3_column_number_density_amf</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
@@ -176,9 +188,9 @@
 <p>The table below details where and how each variable was retrieved from the input product.</p>
 <table class="docutils align-default">
 <colgroup>
-<col style="width: 36%" />
-<col style="width: 11%" />
-<col style="width: 53%" />
+<col style="width: 40%" />
+<col style="width: 10%" />
+<col style="width: 50%" />
 </colgroup>
 <thead>
 <tr class="row-odd"><th class="head"><p>field name</p></th>
@@ -225,6 +237,14 @@
 <tr class="row-odd"><td><p><strong>O3_column_number_density_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/O3.COLUMN_ABSORPTION.SOLAR_UNCERTAINTY.COMBINED.STANDARD</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><strong>O3_column_number_density_uncertainty_random</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/O3.COLUMN_ABSORPTION.SOLAR_UNCERTAINTY.RANDOM.STANDARD</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>O3_column_number_density_uncertainty_systematic</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/O3.COLUMN_ABSORPTION.SOLAR_UNCERTAINTY.SYSTEMATIC.STANDARD</strong></p></td>
 </tr>
 <tr class="row-even"><td><p><strong>O3_column_number_density_amf</strong></p></td>
 <td><p><em>path</em></p></td>
