@@ -2,6 +2,7 @@
   - CLOUDNET L2 classification: fixed fillvalue mapping of values to NaN.
   - GEOMS FTIR: allow instrument lat/lon/alt variables to be one-dimensional
     with replicated values.
+  - GEOMS UVVIS.BREWER: added random+systematic uncertainty variables.
 
 1.15 2022-03-14
 ~~~~~~~~~~~~~~~
